# otus-cpp-basics-2022-12-yamangulov

./: .gitignore  README.md
hw-2/: CMakeLists.txt
hw-2/hello/: CMakeLists.txt  hello.cpp
hw-2/hello2/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
hw-2/homework/: CMakeLists.txt  move_me_out.cpp
