cmake_minimum_required(VERSION 3.15)

project(hello2 CXX)

add_executable(hello2 main.cpp hello.cpp)

set_target_properties(hello2 PROPERTIES
  CXX_STANDARD 17
  CXX_STANDARD_REQUIRED ON)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR
  CMAKE_CXX_COMPILER_ID STREQUAL "GNU")

    target_compile_options(hello2 PRIVATE -Wall -Wextra -Werror -pedantic)

elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")

    target_compile_options(hello2 PRIVATE /EHsc /W4 /WX)

endif()